<resources>
    <string name="app_name">FantasmoSDK</string>
    <string name="textview_demo_text">Demo</string>
    <string name="button_start_text">Start</string>

    <!-- Camera Fragment TextViews -->
    <string name="camera_translation">Camera Translation</string>
    <string name="camera_angles">Euler Angles:</string>
    <string name="device_coordinates">Device Coordinates</string>
    <string name="localize">Localize</string>
    <string name="anchor">Anchor</string>
    <string name="check_parking">Check Parking</string>
    <string name="server_coordinates">Server Coordinates</string>
    <string name="fm_location_listener">FMLocationListener</string>
    <string name="anchor_delta">Anchor Delta</string>
    <string name="requestBehavior">FrameFilterResult</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="playback">Playback</string>
    <string name="record">Record</string>
    <string name="status">Status:</string>
    <string name="localize_time">Localize Time:</string>
    <string name="translation">Translation:</string>
    <string name="total_translation">Total Translation:</string>
    <string name="_0_0s">0.0s</string>
    <string name="_0m">0m</string>
    <string name="_0_rotation">0.00°, 0.00°, 0.00°</string>
    <string name="_0_angle_spread">(0.00°, 0.00°) 0.00°</string>
    <string name="camera_angles_spread">Euler Angles Spread:</string>
    <string name="normal">Normal:</string>
    <string name="limited">; Limited:</string>
    <string name="excessive_motion">ExcessiveMotion:</string>
    <string name="not_available">; Not Available:</string>
    <string name="insufficient_features">Insufficient Features:</string>
    <string name="pitch_low">Too Low:</string>
    <string name="pitch_high">Too High:</string>
    <string name="blurry">; Blurry:</string>
    <string name="_0">0</string>
    <string name="too_fast">Too Fast:</string>
    <string name="too_little">Too Little:</string>
    <string name="features">; Features:</string>
    <string name="upload_time">Upload Time:</string>
    <string name="last_result">Last Result:</string>
    <string name="filter_result">FilterResult</string>
    <string name="qr">QR</string>
    <string name="device_location">Device Location:</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="verify_parking">VERIFY PARKING</string>
    <string name="exit">Exit</string>
    <string name="image_quality_model_version">Image Quality Model:</string>
    <string name="_1_0">1.0</string>
    <string name="insufficient_quality">; Rejections:</string>
    <string name="image_gamma_correction">Image Gamma Correction:</string>
    <string name="last_result_iq">; Last Result:</string>
    <string name="skip">Skip</string>
    <string name="none">None</string>
    <string name="enter_manually">Enter Manually</string>
    <string name="enter_qr_code">Enter QR Code</string>
    <string name="remote_config">Remote Config:</string>
    <string name="frame_error">; FrameError:</string>
    <string name="fantasmo_sdk">Fantasmo SDK</string>
    <string name="na">n/a</string>
    <string name="current_window">Current Window:</string>
    <string name="best_score">Best Score:</string>
    <string name="frames_evaluated">Frames Evaluated:</string>
    <string name="frames_rejected">Frames Rejected:</string>
    <string name="live_score">Live Score:</string>
    <string name="errors">Errors:</string>
    <string name="last_error">Last Error:</string>
    <string name="translation_0">0.00, 0.00, 0.00</string>
    <string name="movement">Movement</string>
    <string name="camera_pitch">Camera Pitch</string>


</resources>