<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/ar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.opengl.GLSurfaceView
            android:id="@+id/surfaceview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:tag="SurfaceView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userInteractionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#00FFFFFF"
                android:tag="userInteractionLayout"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapViewLayout"
                app:layout_constraintVertical_bias="0.98">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/statisticsView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="StatisticsView"
                    app:layout_constraintBottom_toTopOf="@+id/localizeToggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <include
                        layout="@layout/fmstatisticsview"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/checkParkingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_parking"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/localizeToggle" />

                <Switch
                    android:id="@+id/anchorToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#BFFFFFFF"
                    android:minHeight="48dp"
                    android:text="@string/anchor"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/checkParkingButton"
                    app:layout_constraintEnd_toStartOf="@+id/qrToggle"
                    app:layout_constraintStart_toEndOf="@+id/localizeToggle"
                    app:layout_constraintTop_toTopOf="@+id/localizeToggle"
                    app:theme="@style/ColorAnchorSwitchStyle"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Switch
                    android:id="@+id/localizeToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#BFFFFFFF"
                    android:minHeight="48dp"
                    android:tag="Localize"
                    android:text="@string/localize"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/checkParkingButton"
                    app:layout_constraintStart_toStartOf="@+id/statisticsView"
                    app:theme="@style/ColorLocalizeSwitchStyle"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <Button
                    android:id="@+id/mapButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/checkParkingButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/checkParkingButton"
                    app:layout_constraintTop_toTopOf="@+id/checkParkingButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mapViewLayout"
                android:layout_width="match_parent"
                android:layout_height="242dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/filterRejectionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fmrounded_corner"
                android:gravity="center"
                android:text="@string/requestBehavior"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.100000024" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</merge>